js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype/message.js
assert
.
sameValue
(
TypeError
.
prototype
.
message
"
"
)
;
verifyProperty
(
TypeError
.
prototype
"
message
"
{
writable
:
true
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
